# squeezelite-docker

./: .gitignore  BUILD-GUIDE.md  CLEANUP-CHECKLIST.md  CLEANUP-COMPLETE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.minimal  Dockerfile.slim  ENVIRONMENT_VARIABLES.md  ENV_VALIDATION_SUMMARY.md  GITHUB-UPLOAD-CHECKLIST.md  LICENSES.md  ONBOARDING.md  README.md  build-clean.bat  build-clean.ps1  cleanup.bat  cleanup.sh  debug.sh  debug_volume_script.sh  docker-compose.dev.yml  docker-compose.no-audio.yml  docker-compose.windows.yml  docker-compose.yml  entrypoint.sh  fix-entrypoint.bat  fix-entrypoint.ps1  manage.bat  manage.ps1  manage.sh  next-cleanup.md  powershell-helper.bat  pyproject.toml  requirements.txt  supervisord.conf
.claude/: settings.local.json
.github/workflows/: docker-publish.yml  lint.yml
app/: app.py  app_enhanced.py  common.py  env_validation.py  environment.py  health_check.py  swagger.yaml  test_env_validation.py
app/managers/: __init__.py  audio_manager.py  config_manager.py  process_manager.py  sendspin_metadata.py
app/providers/: __init__.py  base.py  registry.py  sendspin.py  snapcast.py  squeezelite.py
app/schemas/: __init__.py  player_config.py
app/static/: style.css
app/templates/: index.html
config/: players.yaml.example
docs/: ARCHITECTURE.md
hassio/: CHANGELOG.md  Dockerfile  config.yaml  repository.yaml
multiroom-audio/: DOCS.md  Dockerfile  run.sh
multiroom-audio/translations/: en.yaml
tests/: README.md  __init__.py  conftest.py  test_api_endpoints.py  test_audio_manager.py  test_config_manager.py  test_player_config_schema.py  test_process_manager.py  test_sendspin_provider.py  test_snapcast_provider.py  test_squeezelite_provider.py
