[project]
name = "multiroom-audio"
version = "1.1.0"
description = "Multi-room audio player manager supporting Squeezelite, Sendspin, and Snapcast"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.10 (Ubuntu 22.04 default)
target-version = "py310"

# Line length to match common standards
line-length = 120

# Exclude common non-source directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Start with a reasonable set of rules, can tighten later
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes (unused imports, variables, etc.)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify
]

# Ignore rules that are too noisy for this codebase
ignore = [
    "E501",   # line too long - handled by formatter, not linter
    "B008",   # function call in default argument - common in Flask
    "SIM108", # ternary operator - sometimes less readable
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Treat unregistered markers as errors
    "--strict-config",        # Treat config errors as errors
    "-v",                     # Verbose output
    "--tb=short",            # Shorter traceback format
    "--maxfail=5",           # Stop after 5 failures
]

# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage options (if using pytest-cov)
# Uncomment to enable coverage reporting
# addopts = ["--cov=app", "--cov-report=html", "--cov-report=term"]

# Minimum Python version
minversion = "7.0"
